<resources>
    <string name="app_name">Library</string>
    <string name="ceslab_s_library">Ceslab\'s Library</string>
    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="admin">Admin</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="appname">Ceslab Library</string>
    <string name="remember_password">Remember password</string>
    <string name="adminpass">admin</string>
    <string name="loginwelcome">LOGIN</string>
</resources>